signup print response

--- a/WebContent/Signup.html
+++ b/WebContent/Signup.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Signup</h2>
 
-<form action="SignupServlet">
+<form action="SignupServlet" method="post">
 	FirstName:<input type="text" name="firstName"><br><Br>
 	Email: <input type="text" name="email"><br><br>
 	Password: <input type="password" name="password"><br><br>
