servlet init param - getparametervalues

--- a/WebContent/Signup.html
+++ b/WebContent/Signup.html
@@ -5,14 +5,17 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h2>Signup</h2>
+	<h2>Signup</h2>
 
-<form action="SignupServlet" method="post">
-	FirstName:<input type="text" name="firstName"><br><Br>
-	Email: <input type="text" name="email"><br><br>
-	Password: <input type="password" name="password"><br><br>
-	<input type="submit" value="Signup">
+	<form action="SignupServlet" method="post">
+		FirstName:<input type="text" name="firstName"><br>
+		<Br> Email: <input type="text" name="email"><br>
+		<br> Password: <input type="password" name="password"><br>
+		<br> Hobby : Reading <input type="checkbox" name="hobby"
+			value="reading"> Cricket <input type="checkbox" name="hobby"
+			value="ckt"> Valo <input type="checkbox" name="hobby"
+			value="valo"> <input type="submit" value="Signup">
 
-</form>
+	</form>
 </body>
 </html>
